lox-tests/tests/variable/duplicate_parameter.stderr
ERROR: Already declared variable 'arg' in this local scope
 --> 2:9
  |
2 |         arg) { // Error at 'arg': Already a variable with this name in this scope.
  |         ^-^
